--- a/notes.html
+++ b/notes.html
@@ -9,6 +9,9 @@
 /* use this command to run test using its title
     npx playwright test -g "test codegen example"
     will run the test with the title "test codegen example"
+
+    to run a specific test file
+    npx playwright test api --workers=1
 */
 
 <!--  3
